--- a/data/index.html
+++ b/data/index.html
@@ -1,4 +1,4 @@
-f<!-- 
+<!-- 
 Auteur : Florian Hostachy
 Date : 01/09/2022
 Fonction : Interface qui permettra l'utilisation du four avec les différentes informations utilies pour le bon fonctionnement
@@ -23,8 +23,8 @@ Version : 1.0
     <h2>Type de bois : </h2>
 
     <!-- Les différent bois pour qui viendront des informations de l'api  -->
-    <select name="viewport"  class="select" style ="width: 300px; height:30px; margin-left: 15px;";>
-        <option value="default" id="listeBois"></option>
+    <select name="viewport" id="listeBois"  class="select" style ="width: 300px; height:30px; margin-left: 15px;";>
+
     </select>
     <h2>Caractéristiques : </h2>
     <br>
