--- a/data/index.html
+++ b/data/index.html
@@ -68,14 +68,17 @@ Version : 1.0
                 <p type="text" id="boisCuisson" name="bois" style="margin-left: 30px;"></p>
             </span>
             <span>
-                <p id="tempRestantCuisson" name="tempRestant" style="margin-left: 50px;">10</p>
+                <p id="tempRestantCuisson" name="tempRestant" style="margin-left: 50px;"></p>
             </span> 
             <span>
-                <p  id="tempsSechageCuisson" name="tempsSechage"  ></p>
+                <p  id="tempsSechageCuisson" name="tempsSechage"></p>
             </span> 
             <span>
                 <p id="tempMinCuisson" name="tempMin" style="margin-left: 50px;"></p>
             </span>
+            <!-- <span class="ledRouge" id="ledRouge"></span>
+            <span class="ledJaune" id="ledJaune"></span>
+            <span class="ledVert" id="ledVert"></span> -->
         </div>
     </div>
     
