Ajout du compteur
1.5

--- a/data/index.html
+++ b/data/index.html
@@ -65,20 +65,17 @@ Version : 1.0
         <!-- Différentes informations pour le bon fonctionnement du four qui viendront de l'api une fois que le bois sera sélectionner   --> 
         <div class="information">
             <span>
-                <p type="text" id="boisCuisson" name="bois" style="margin-left: 30px;"></p>
+                <p type="text" id="boisCuisson" name="bois" style="margin-left: 30px;color: blue;"></p>
             </span>
             <span>
-                <p id="tempRestantCuisson" name="tempRestant" style="margin-left: 50px;"></p>
+                <p id="tempRestantCuisson" name="tempRestant" style="margin-left: 50px;color: blue;"></p>
             </span> 
             <span>
-                <p  id="tempsSechageCuisson" name="tempsSechage"></p>
+                <p  id="tempsSechageCuisson" name="tempsSechage" style="color: blue;"></p>
             </span> 
             <span>
-                <p id="tempMinCuisson" name="tempMin" style="margin-left: 50px;"></p>
+                <p id="tempMinCuisson" name="tempMin" style="margin-left: 50px;color: blue;"></p>
             </span>
-            <!-- <span class="ledRouge" id="ledRouge"></span>
-            <span class="ledJaune" id="ledJaune"></span>
-            <span class="ledVert" id="ledVert"></span> -->
         </div>
     </div>
     
